--- a/obocpage.html
+++ b/obocpage.html
@@ -27,13 +27,13 @@
 								<a href="#page-title" alt="refresh the page">Home</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book Club Main</a>
+								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book club main</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="aboutuspage.html" alt="go to the about us page">About us</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="obocpage.html" alt="go to the one book one community page">One Book</a>
+								<a href="greatesthitspage.html" alt="go to the greatest hits page">Greatest hits</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a>
@@ -42,7 +42,7 @@
 					</nav>
 					<p>Text about One Book One Community program here</p>
 					<figure class="header-helloB">
-						<img alt="Cropped view of colorful Hello, Beautiful! dust jacket highlighting woman's eyes." src="images/HelloBBigIMG.png">
+						<img alt="Cropped view of colorful Hello Beautiful dust jacket highlighting woman's eyes." src="images/HelloBBigIMG.png">
 					</figure>
 					<p>We offer items for adults and children. Prices start from $0.25 to $1, and there are Sunday specials. 100% of your purchase goes to the library. We are conveniently located at the <a href="#roommap" alt="go to map of sale rooms">Cubberley Community Center</a>. Hours vary by sale room, but all rooms are open <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span></p>
 					<p>Our friendly sales people will help you find treasures in the stacks without sales tax. Need a present? Our gift certificates are available in $5.00 denominations. You can find more information about the <a href="#mainsaleinfo" alt="go to main sale info">Main sale</a>, <a href="#childrensaleinfo" alt="go to children's sale info">Children's sale</a>, and <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> by clicking the links</p>
@@ -88,7 +88,7 @@ Our volunteers conduct monthly and online sales of books and other media donated
 			<nav>
 				<ul> <!--can add classes here later-->
 					<li><a href="#obocpage-title" alt="go to the top of the page">Home</a></li>
-					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC Main Page</a></li>
+					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC main page</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
