--- a/obocpage.html
+++ b/obocpage.html
@@ -52,22 +52,22 @@
 				<article>
 				<!--<p>-->
 					<!--Hello Beautiful content-->
-						<h2 id="hellobeautiful">Hello Beautiful (Ann Napolitano, 2024)</h2>
-						<figure class="KavClayDustJacket">
-							<img alt="Dust jacket image for Kavalier and Clay, comic book style New York City." src="images/KavAndClayIMG.png">
-						</figure>
-						<p>text about the book here.</p>
-						<p>--<a href="https://https://www.kirkusreviews.com/book-reviews/michael-chabon/the-amazing-adventures-of-kavalier-and-clay/" target="_blank">Kirkus Reviews</a></p>
+						<h2 id="hellobeautiful">Hello Beautiful (Ann Napolitano, 2023)</h2>
+						<p>Drawn into the orbit of a tightknit family upon falling for Julia, the eldest of the four Padavano sisters, William Waters experiences the kind of family solidarity, affection, and sense of belonging he never had with his own dysfunctional parents. William developed an (initially) effective coping strategy during his lonely childhood and devotes his energies toward succeeding in the only place he feels comfortable: the basketball court. College sweethearts, Julia and William marry and begin a life together directed mostly by Julia’s wishes for stability and status; the plan and relationship are derailed by William’s gradual decline into a crippling depression. Julia and William divorce, and William distances himself from their infant daughter, Alice, too. Relationships between and among William and all of the Padavanos rupture and realign over the ensuing decades as Napolitano spins a saga of familial love, deception, and hope for healing while adeptly highlighting each family member’s unique position in the narrative. Each of the Padavano girls is finely described—there's Julia, who's straightforward and driven; Sylvie, dreamy and romantic; and twins Cecelia (artistic) and Emeline (the sensitive moral compass of the group)—and it is entirely plausible that the girls envision themselves from time to time as the March sisters from Little Women. (Rounding out that parallel is the presence of a dreamy, poetic father and a hardworking, long-suffering mother.) More subtly, the influence of Walt Whitman is felt throughout the book, from epigraph to end, as characters come to terms with their roles in an evolving universe. As in Napolitano’s recent Dear Edward (2020), heartbreaking circumstances shatter the lives of relatable human characters who are unprepared for the task of building a meaningful life.</p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/ann-napolitano/hello-beautiful/" target="_blank">Kirkus Reviews</a></p>
 					<!--Little Women content-->
 						<h3 id="littlewomen">Little Women (Louisa May Alcott, date)</h3>
 						<figure class="LessonsDustJacket">
 							<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
 						</figure>
-						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty, recently retired from the military. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
-						<p>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>
-					<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
+						<p>Little Women tells the story of the four March sisters—responsible Meg, independent Jo, gentle Beth, and artistic Amy—as they come of age during the American Civil War. Despite financial hardship, the girls navigate friendship, family struggles, budding ambitions, and first loves. Jo strives to become a writer, Meg dreams of a stable home life, Beth’s kindness shapes the family, and Amy matures into a confident young woman.</p>
+						<p>As the sisters grow into adulthood, they face loss, changing relationships, and the realization that their paths in life will be different but equally meaningful.</p>	
+						<p>Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition—especially for women—and the idea that love can take many forms beyond romance.</p>
 					<!--Films content-->
 						<h4 id="LWMovies">Little Women in Film</h4>
+						<figure class="littlewomenfilm">
+							<img alt="Movie poster from the 2019 film Little Women, featuring a view of Jo played by Saorise Ronan." src="images/littlewomenfilm.png">
+						</figure>
 						<p>Did you know there are multiple film versions of Little Women? You can find many of them on DVD and/or Bluray at the library. Here's a list</p>
 	          			<ul>
 							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019.">Little Women (Greta Gerwig, 2019)</a></li>
