--- a/obocpage.html
+++ b/obocpage.html
@@ -66,7 +66,7 @@
 					<!--Films content-->
 						<h4 id="LWMovies">Little Women in Film</h4>
 						<figure class="littlewomenfilm">
-							<img alt="Movie poster from the 2019 film Little Women, featuring a view of Jo played by Saorise Ronan." src="images/littlewomenfilm.png">
+							<img alt="Movie poster from the 2019 film Little Women, featuring a view of Jo played by Saorise Ronan." src="images/LittleWomenFilmIMG.png">
 						</figure>
 						<p>Did you know there are multiple film versions of Little Women? You can find many of them on DVD and/or Bluray at the library. Here's a list</p>
 	          			<ul>
