--- a/obocpage.html
+++ b/obocpage.html
@@ -41,7 +41,9 @@
 							</li>
 						</ul>
 					</nav>
-					<p>Text about One Book One Community program here</p>
+					<p>One Book, One Community (OBOC) is a cooperative reading-and-discussion initiative run jointly by the Cook Memorial Public Library District, Indian Trails Public Library District, and Vernon Area Public Library District. Its goal is to encourage dialogue and strengthen community by having residents from across multiple suburbs read the same book during the program period, then come together (in-person or virtually) for book discussions and related events. The program emphasizes inclusivity — events are open to all, regardless of which library you belong to.</p>
+					<p>At the start of the program, each participating library distributes free copies of the selected book (while supplies last). Over the following weeks, there will be scheduled public events that tie into the book: group discussions, lectures, workshops, and art- or culture-related programs (sometimes loosely connected to the book’s themes, locale, or subject). The season will wrap up with an author event (live or via Zoom) with the book’s author.</p>
+					<p>The Whippoorwills will be discussing the book at our February meeting. Check OBOC out at their <a href="https://www.1book.org/book.html" alt="go to the one book website">website</a> today!</p>
 					<figure class="header-helloB">
 						<img alt="Cropped view of colorful Hello Beautiful dust jacket highlighting woman's eyes." src="images/HelloBBigIMG.png">
 					</figure>
@@ -74,12 +76,7 @@
 							<li><a alt="Little Women, a film directed by someone in 1949">Little Women (director, 1949)</a></li>
 							<li><a alt="Little Women, a film directed by George Cukor in 1933">Little Women (George Cukor, 1933)</a></li>
 							<li><a alt="Little Women, two silent films released in 1917 and 1918">Little Women (silent films, 1917 and 1918)</a></li>
-						</ul> 
-					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
-					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
-					<p>Friends of the Palo Alto Library (FOPAL) is a member-supported 501(c)(3) non-profit organization dedicated to supporting the <a href="https://library.cityofpaloalto.org/" target="_blank">Palo Alto City Library</a> and its users through volunteerism, book sales, and advocacy. Established in 1938, FOPAL has grown with the library community it serves.
-Our volunteers conduct monthly and online sales of books and other media donated by the community. Net proceeds from our sales are used for the purchase of books, media, online resources, equipment, and special programs for Palo Alto’s five public libraries.</p>
-				<!--</p>-->
+						</ul>
 				</article>
 		</main>
 		<footer id="page-footer">
